# RustyReader

./: AGENTS.md  README.md  README.zh-CN.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/: AGENTS.md
.github/workflows/: ci.yml
crates/: AGENTS.md
crates/app-core/src/: service.rs
crates/app-core/tests/: service_flow.rs
docs/: AGENTS.md  icon-assets.md
docs/superpowers/plans/: 2026-04-22-pdf-reader.md
docs/superpowers/specs/: 2026-04-22-pdf-reader-design.md
extensions/: AGENTS.md
extensions/chrome/: README.md  manifest.json  package.json
extensions/chrome/docs/: paper-reader-connector-api.md  rustyreader-connector-api.md
extensions/chrome/extension/: background.js
extensions/chrome/scripts/: mock-connector.js  package-extension.js  smoke-test.js
extensions/safari/: README.md  manifest.json  package.json
scripts/: AGENTS.md  build-browser-extensions.js  verify.sh
src/: AGENTS.md  App.test.tsx  App.tsx  bootstrap.test.tsx  bootstrap.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/pdfium/: README.md
src-tauri/src/: ai_stream.rs  commands.rs  connector.rs  export.rs  main.rs  menu.rs  ocr.rs  pdf_engine.rs  state.rs
src/hooks/: useAiSessionState.ts  useAppApi.ts  useLibraryState.ts  useReaderState.ts
src/lib/: aiSettingsView.test.ts  aiSettingsView.ts  aiView.test.ts  aiView.ts  api.ts  appView.test.ts  appView.ts  binaryData.test.ts  binaryData.ts  collectionView.ts  contracts.ts  filePaths.ts  htmlEscape.test.ts  htmlEscape.ts  markdownImages.test.ts  markdownImages.ts  pdfEngineResponses.test.ts  pdfEngineResponses.ts  runtimePolyfills.ts  storagePrefs.ts  viewMath.test.ts
src/styles/: ai.css  base.css  layout.css  pdf.css  reader.css  responsive.css  settings.css
src/test/: fakeApi.ts  pdfjsLegacyMock.ts  setup.ts
(+54 files in other folders)
