[package]
name = "rustyreader-desktop"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
app-core = { path = "../crates/app-core" }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"

# Native PDFium-backed PDF engine (render + text spans) to avoid WKWebView / pdf.js compatibility issues.
pdfium-render = { version = "0.9.1", default-features = true }
lopdf = "0.35"

# Native OCR fallback for scanned PDFs (bundled Tesseract + tessdata resources).
tesseract-ocr-static = "0.1.2"
image = { version = "0.25", default-features = false, features = ["png"] }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
